Adding space between figure caption and paragraph.

--- a/tex/additional-points/ahp-tasks-iv1350-ferrigan.tex
+++ b/tex/additional-points/ahp-tasks-iv1350-ferrigan.tex
@@ -169,12 +169,11 @@ In this way duplicated code can be eliminated.
         \includegraphics[width=\textwidth]{../../uml/output/uml_adp_tasks}
 %        \includegraphics[trim=0cm 0cm 0cm 0cm, clip, width=\textwidth]{uml/output/uml_v3.png}
 %        \caption{The Start Up \verb|Main| system operations}
-        \caption{The template method applied with the observer pattern}
+        \caption{The template method applied with the observer pattern\\}
         \label{fig:the-observers}
     \end{center}
 \end{figure}
 
-\\
 The abstract class
 \mintinline{java}{SaleView} is the template
 for sale observers\footnote{The observers are only exposed to certain methods or attributes.
