Adding the ahp-task 1 UML to README

--- a/tex/additional-points/ahp-tasks-iv1350-ferrigan.tex
+++ b/tex/additional-points/ahp-tasks-iv1350-ferrigan.tex
@@ -169,7 +169,8 @@ In this way duplicated code can be eliminated.
         \includegraphics[width=\textwidth]{../../uml/output/uml_adp_tasks}
 %        \includegraphics[trim=0cm 0cm 0cm 0cm, clip, width=\textwidth]{uml/output/uml_v3.png}
 %        \caption{The Start Up \verb|Main| system operations}
-        \caption{The template method applied with the observer pattern\\}
+        \caption{The template method applied with the observer pattern.
+        This UML is an extract from the main class diagram.\\}
         \label{fig:the-observers}
     \end{center}
 \end{figure}
